--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script src="https://code.highcharts.com/maps/highmaps.js"></script>
     <script src="https://code.highcharts.com/maps/modules/data.js"></script>
     <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-    <script src="script.js"></script>
+    <script src="https://code.highcharts.com/mapdata/custom/world-eckert3-highres.js"></script>
+
+    <script src="script.js" type="module"></script>
+    <script src="lib.js" type="module"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
