--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
     <script src="script.js" type="module"></script>
     <script src="lib.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
+ 
+    
+        <div class="game">
+            <p class="click-prompt">Click on <b></em><span id="country-display"></span></em></p>
+            <figure class="highcharts-figure">
+                <div id="container"></div>
+            </figure>
+            <div id="feedback" style="display: none;"></div>
+        </div>
 
-    <h1 id="country-display"></h1>
-    <figure class="highcharts-figure">
-        <div id="container"></div>
-    </figure>
-    <p id="feedback"></p>
+  
+
 
 </body>
 </html>
