--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
  
     
         <div class="game">
-            <p class="click-prompt">Click on <b></em><span id="country-display"></span></em></p>
+            <p class="click-prompt">Click on <b><span id="country-display"></span></p>
             <figure class="highcharts-figure">
                 <div id="container"></div>
             </figure>
