--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                 <div id="container"></div>
             </figure>
             <div id="feedback" style="display: none;"></div>
+            <div id="skip-wrap">
+                <button id="skip">skip</button>
+            </div>
         </div>
 
   
