minimum styles to deploy to test mobile issue

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <div class="game">
         
-        <p class="click-prompt">Click on <b><span id="country-display"></span></p>
+        <div class="click-wrap">
+            Click on <b><span id="country-display"></span>
+        </div>
 
         <div id="skip-wrap">
             <button id="skip">skip</button>
