getting the native names from the api

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <div class="game">
         
-        <div class="click-wrap">
-            Click on <b><span id="country-display"></span>
+        <span class="click-wrap">
+            <span class="grayer">Click on:</span> <br><b><span id="country-display"></span>
         </div>
 
         <div id="skip-wrap">
