--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="game">
         
         <span class="click-wrap">
-            <span class="grayer">Click on:</span> <br><b><span id="country-display"></span>
+            <span class="clikon">Click on:</span> <br><b><span id="country-display"></span>
         </div>
 
         <div id="skip-wrap">
