--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
      
     </div>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-L9HEF9RJ60"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-L9HEF9RJ60');
+    </script>
+
 </body>
 </html>
 
